# btt

./: .env.sample  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cryptid/dep-audit/: checksums.db
.github/workflows/: btcli-compat.yml  dep-audit.yml  dispatch-run.yml  lint.yml  release.yml  tests.yml
docs/: developer-guide.md
scripts/btcli-compat/: README.md  btcli-pins.txt  check.py
scripts/dep-audit/: README.md  audit.sh  checksum.py  deny.toml  deny.toml.in  render-deny-toml.sh  render-ignores.sh  run-one.sh  rustsec-ignores.jsonl  test_checksum.py  test_render_ignores.sh  tool-versions.txt
src/: cli.rs  error.rs  main.rs  output.rs  rpc.rs
src/commands/: axon.rs  chain.rs  child_hotkey.rs  dynamic_decode.rs  identity.rs  liquidity.rs  mod.rs  password_file.rs  paths.rs  register.rs  skill.rs  stake.rs  subnet.rs  swap_coldkey.rs  swap_hotkey.rs  transfer.rs  utils.rs  wallet.rs  wallet_faucet.rs  wallet_keys.rs  weights.rs
