[package]
name = "btt"
version = "0.1.0"
edition = "2021"
description = "Minimal, secure Bittensor CLI"
license = "MIT"

[dependencies]
subxt = { version = "0.38", features = ["substrate-compat"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sp-core = { version = "34", default-features = false, features = ["std"] }
bip39 = { version = "2", features = ["rand"] }
rpassword = "5"
zeroize = { version = "1", features = ["derive"] }
xsalsa20poly1305 = "0.9"
scrypt = "0.11"
rand = "0.8"
hex = "0.4"
