[package]
name = "btt"
version = "0.1.0"
edition = "2021"
description = "Minimal, secure Bittensor CLI"
license = "MIT"

[dependencies]
subxt = { version = "0.38", features = ["substrate-compat"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sp-core = { version = "34", default-features = false, features = ["std"] }
rpassword = "7"
zeroize = { version = "1", features = ["derive"] }
xsalsa20poly1305 = "0.9"
argon2 = "0.5"
rand = "0.8"
hex = "0.4"
# libc: std-lib-equivalent binding for unix syscall constants. We need
# `O_NOFOLLOW` in `commands/password_file.rs` to refuse symlinks at open()
# time (closes the TOCTOU window in issue #13). libc is already transitively
# present through sp-panic-handler / tokio / errno; pulling it in as a direct
# dep costs nothing new and lets us avoid hard-coding a platform-specific
# magic number. Per feedback_dep_discipline.md this is the explicit
# justification.
libc = "0.2"
