[package]
name = "btt"
version = "0.1.0"
edition = "2021"
description = "Minimal, secure Bittensor CLI"
license = "MIT"

[dependencies]
subxt = { version = "0.50", default-features = false, features = ["jsonrpsee", "native"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sp-core = { version = "40", default-features = false, features = ["std"] }
rpassword = "7"
zeroize = { version = "1", features = ["derive"] }
xsalsa20poly1305 = "0.9"
argon2 = "0.5"
rand = "0.8"
hex = "0.4"
url = "2"
